Fourth commit. Task 4 completed

--- a/shop/shop/src/main/resources/application.properties
+++ b/shop/shop/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.datasource.url = jdbc:mysql://localhost:3306/onlineshop
 spring.flyway.user=root
 spring.flyway.password=Portocaliu1234567.
 spring.flyway.url=jdbc:mysql://localhost:3306/onlineshop
+
+app.strategy=SINGLE_LOCATION
+#app.strategy=MOST_ABUNDANT
