--- a/shop/shop/src/main/resources/application.properties
+++ b/shop/shop/src/main/resources/application.properties
@@ -1,12 +1,12 @@
-
-
-spring.datasource.username = root
-spring.datasource.password = Portocaliu1234567.
-spring.datasource.url = jdbc:mysql://localhost:3306/onlineshop
-
+spring.datasource.username=root
+spring.datasource.password=Portocaliu1234567.
+spring.datasource.url=jdbc:mysql://localhost:3306/onlineshop
 spring.flyway.user=root
 spring.flyway.password=Portocaliu1234567.
 spring.flyway.url=jdbc:mysql://localhost:3306/onlineshop
-
 app.strategy=SINGLE_LOCATION
 #app.strategy=MOST_ABUNDANT
+spring.profiles.active=with-basic
+#spring.profiles.active=with-form
+spring.security.user.name=cristi
+spring.security.user.password=cristi
