Finished a part of the code review

--- a/shop/shop/src/main/resources/application.properties
+++ b/shop/shop/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.datasource.username=root
 spring.datasource.password=Portocaliu1234567.
-spring.datasource.url=jdbc:mysql://localhost:3306/onlineshop
+spring.datasource.url=jdbc:mysql://localhost:3306/onlineshop1
 spring.flyway.user=root
 spring.flyway.password=Portocaliu1234567.
-spring.flyway.url=jdbc:mysql://localhost:3306/onlineshop
+spring.flyway.url=jdbc:mysql://localhost:3306/onlineshop1
 app.strategy=SINGLE_LOCATION
 #app.strategy=MOST_ABUNDANT
 spring.profiles.active=with-basic
