--- a/shop/shop/src/main/resources/application.properties
+++ b/shop/shop/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/shop
 spring.flyway.user=root
 spring.flyway.password=Portocaliu1234567.
 spring.flyway.url=jdbc:mysql://localhost:3306/shop
-app.strategy=SINGLE_LOCATION
-#app.strategy=MOST_ABUNDANT
+#app.strategy=SINGLE_LOCATION
+app.strategy=MOST_ABUNDANT
 spring.profiles.active=with-basic
 #spring.profiles.active=with-form
 spring.security.user.name=cristi
