--- a/shop/shop/src/main/resources/application.properties
+++ b/shop/shop/src/main/resources/application.properties
@@ -4,9 +4,20 @@ spring.datasource.url=jdbc:mysql://localhost:3306/shop
 spring.flyway.user=root
 spring.flyway.password=Portocaliu1234567.
 spring.flyway.url=jdbc:mysql://localhost:3306/shop
+
 #app.strategy=SINGLE_LOCATION
 app.strategy=MOST_ABUNDANT
+
 spring.profiles.active=with-basic
 #spring.profiles.active=with-form
+
 spring.security.user.name=cristi
-spring.security.user.password=cristi
+spring.security.user.password=$2a$10$TdKcA/4vC//4TJHiCRwH4OYglWp1N6aOcABH9n2l3J.B2CtrvWd7e
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=cristibmx0@gmail.com
+spring.mail.password=ukvtqqnmwirzubye
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
